atualizaçao correçao menu saiba mais

--- a/saibamais.html
+++ b/saibamais.html
@@ -14,9 +14,9 @@
   </head>
 
   <body>
-    <section class="section-1"></section>
     <nav>
-      <img alt="Logotipo do site, que significa um jornal com um coração laranja, simbolizando o otimismo e a felicidade" class="logotipo" src="assets/imagens/logotipo-longo.png">
+      <img alt="Logotipo do site, que significa um jornal com um coração laranja, simbolizando o otimismo e a felicidade"
+        class="logotipo" src="assets/imagens/logotipo-longo.png">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="contato.html">Contato</a></li>
